--- a/PIE_1-2_LCC(AdmRF).ipynb
+++ b/PIE_1-2_LCC(AdmRF).ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determina la frecuencia relativa mediante la división entre frecuencias por clase y el número de observaciones. Es decir, la frecuencia relativa es una fracción de las observaciones que pertenecen a cada clase"
+    "# Determina la frecuencia relativa mediante la división entre frecuencias por clase y el número de observaciones. Es decir, la frecuencia relativa es una fracción de las observaciones que pertenecen a cada clase"
    ]
   },
   {
@@ -521,6 +521,116 @@
     "\n",
     "\n",
     "Allen, F., Myers, S., y Brealey, R. (2015). Principios de finanzas corporativas. Haga clic para ver más opciones [archivo PDF]. Recuperado de https://www.u-cursos.cl/usuario/b8c892c6139f1d5b9af125a5c6dff4a6/mi_blog/r/Principios_de_Finanzas_Corporativas_9Ed__Myers.pdf"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Actividad 7. Proyecto Integrador Etapa 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Lorenzo Cárdenas Cárdenas\n",
+    "\n",
+    "Universidad del Valle de México\n",
+    "\n",
+    "Administración de Riesgos\n",
+    "\n",
+    "Docente: Mtra Clara Arechiga Alvarado\n",
+    "\n",
+    "23 de Abril de 2023\n",
+    "\n",
+    "**Matricula:** 860131208 \n",
+    "\n",
+    "La correspondiente investigación está dirigida a nombre de Lorenzo Cárdenas  Cárdenas\n",
+    "\n",
+    "La correspondencia relacionada con esta investigación debe ser dirigida a nombre de Lorenzo Cárdenas Cárdenas,  Universidad del Valle de México, Calle Tezcatlipoca 2301, Los Rodríguez, 25204 Saltillo, Coah.  Correo: a860131208@my.uvm.edu.mx"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instrucciones:\n",
+    "Lee detenidamente el siguiente planteamiento y resuelve. Deberás incluir el procedimiento, análisis y resultado, para ello puedes utilizar hojas de cálculo u otro formato, como escanear los datos si es que la haces a lápiz en papel; en cualquier caso, deberás cuidar la legibilidad de la información. \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "Realiza el análisis del riesgo de crédito.\n",
+    "El valor nocional de instrumento financiero es de $200,000.00 y si la operación tuviera liquidez hoy, el tenedor del instrumento recibiría de la contraparte $20,000.00 (que es la ganancia no realizada de la transacción). Por su parte, el estimado de lo que podría variar el mercado en el periodo remanente del contrato (Deemed Risk) es de 8%, y por tanto, el riesgo potencial para este caso es de $16,000.00.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Riesgo de crédito:  36000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcula el riesgo de crédito, a partir de la fórmula.\n",
+    "\n",
+    "# Riesgo de crédito = Riesgo vigente  +  Riesgo potencial\n",
+    "\n",
+    "RV = 20000\n",
+    "RP = 16000\n",
+    "\n",
+    "RC = RV + RP\n",
+    "print('Riesgo de crédito: ', RC)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si tenemos que la probabilidad de incumplimiento de una contraparte califica como BBB S&P es de .18%, la tasa de recuperación del colateral es de $51.13 por cada $100 y la exposición de riesgo de crédito es de 100 millones de pesos, la pérdida esperada por riesgo de crédito sera como sigue: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perdida esperada:  87966.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcula la perdida esperada asociada a una contraparte.\n",
+    "\n",
+    "P_Incumplimiento = .0018\n",
+    "exposicion = 100_000_000\n",
+    "tasa_recuperacion = .5113\n",
+    "\n",
+    "PE = P_Incumplimiento * exposicion * (1 - tasa_recuperacion)\n",
+    "print('Perdida esperada: ', PE)\n"
    ]
   }
  ],
