--- a/PIE_1-2_LCC(AdmRF).ipynb
+++ b/PIE_1-2_LCC(AdmRF).ipynb
@@ -632,6 +632,22 @@
     "PE = P_Incumplimiento * exposicion * (1 - tasa_recuperacion)\n",
     "print('Perdida esperada: ', PE)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Referencias"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lara, A. (2008). Medición y control de riesgos financieros. [versión electrónica]. Recuperado de https://es.scribd.com/doc/48773171/Medicion-y-Control-de-Riesgos-Financieros-LIBRO-DE-ALFONSO-DE-LARA-HARO"
+   ]
   }
  ],
  "metadata": {
